--- a/#src/scss/bem-blocks/breadcrumbs.scss
+++ b/#src/scss/bem-blocks/breadcrumbs.scss
@@ -12,21 +12,31 @@
   }
   // .breadcrumbs__item
   &__item {
-    font-weight: normal;
-    line-height: 1.3;
-    color: $grey;
-  }
-  // .breadcrumbs__link
-  &__link {
     display: inline-grid;
     grid-auto-flow: column;
     grid-template-columns: repeat(3, min-content);
     column-gap: 5px;
-    color: $grey-light;
-    white-space: nowrap; //?
+    font-weight: normal;
+    line-height: 1.3;
+    color: $grey;
+    white-space: nowrap;
     &::after {
       content: '/';
-      color: inherit;
+      color: $grey-light;
+    }
+    &:last-child {
+      &::after {
+        content: none;
+      }
+    }
+  }
+  // .breadcrumbs__link
+  &__link {
+    color: $grey-light;
+    &:hover,
+    &:focus {
+      color: $grey;
+      text-decoration: underline;
     }
   }
 }
