--- a/#src/scss/product.scss
+++ b/#src/scss/product.scss
@@ -145,10 +145,12 @@
   // .product__slide
   &__slide {
     img {
-      object-fit: cover;
+      object-fit: contain;
+      aspect-ratio: 16 / 9;
       display: flex;
       align-items: center;
       justify-content: center;
+      background-color: #f6f6f6;
     }
   }
   // .product__info
