--- a/#src/scss/product.scss
+++ b/#src/scss/product.scss
@@ -67,7 +67,6 @@
       }
     }
   }
-
   // .product__gallery
   &__gallery {
     width: 100%;
@@ -112,45 +111,59 @@
   }
   // .product__thumbs-slide
   &__thumbs-slide {
-    overflow: hidden;
+    // background-color: #f6f6f6;
+    // &.swiper-slide {
+    //   height: 93px;
+    // }
     img {
+      max-width: 100%;
+      height: auto;
       object-fit: cover;
-      /* Чтоб box-shadow inset ыидеть */
-      position: relative;
-      z-index: -1;
       /* Для alt */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 12px;
-      border: 1px solid transparent;
+      //!нужна фиксированная высота блока чтобы можно было центрировать
+      // display: grid;
+      // place-items: center;
+      // font-size: 10px;
+      // border: 1px solid transparent;
     }
     &.swiper-slide-thumb-active {
-      & img {
-        border: 1px solid $orange;
-      }
+      // & img {
+      border: 1px solid $orange;
+      // }
       /* Почему-то не работает в хрома на телефоне */
       // box-shadow: inset 0 0 0 1px $red;
+    }
+    .swiper-lazy {
+      opacity: 0;
+    }
+    .swiper-lazy-loaded {
+      opacity: 1;
     }
   }
   // .product__slider
   &__slider {
-    width: 100%;
+    // width: 100%;
     margin-bottom: 10px;
     @media (min-width: $md4) {
-      width: unset;
+      // width: unset;
       margin-bottom: 0;
+    }
+    .swiper-lazy {
+      opacity: 0;
+    }
+    .swiper-lazy-loaded {
+      opacity: 1;
     }
   }
   // .product__slide
   &__slide {
+    display: flex;
+    align-items: center;
+    background-color: #f6f6f6;
     img {
-      object-fit: contain;
-      aspect-ratio: 16 / 9;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #f6f6f6;
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
     }
   }
   // .product__info
@@ -174,35 +187,19 @@
       padding-right: 20px;
     }
   }
-  // .product__info-inner
-  &__info-inner {
-  }
-  // .product__props
-  &__props {
-    margin-bottom: 20px;
-    // margin-bottom: 40px;
-  }
   // .product__actions
   &__actions {
   }
-  // .product__row
-  &__row {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-bottom: 25px;
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
   // .product__price
   &__price {
+    margin-bottom: 25px;
+  }
+  // .product__price-inner
+  &__price-inner {
     display: inline-grid;
     grid-auto-flow: column;
     align-items: center;
     column-gap: 15px;
-    margin-right: 27px;
   }
   // .product__price-item
   &__price-item {
@@ -226,6 +223,7 @@
   }
   // .product__available
   &__available {
+    margin-bottom: 16px;
     font-size: 17px;
     line-height: 1.3;
     color: $grey;
@@ -235,36 +233,69 @@
   }
   // .product__desc
   &__desc {
+    margin-bottom: 40px;
     font-size: 17px;
     line-height: 1.4;
     span {
       display: block;
       color: $grey;
-      margin: 0 0 12px;
+      margin: 0 0 8px;
     }
     p {
-      margin: 10px 0;
+      margin: 8px 0;
     }
   }
-  // .product__counter
-  &__counter {
-    // margin-right: 40px;
+  // .product__button-wrapper
+  &__button-wrapper {
+    display: inline-grid;
+    row-gap: 10px;
+    width: 100%;
+    @media (min-width: $md6) {
+      grid-auto-flow: column;
+      grid-template-columns: 2fr 1fr;
+      column-gap: 16px;
+    }
+    @media (min-width: $md5) {
+      grid-auto-flow: row;
+      grid-template-columns: none;
+    }
+    @media (min-width: 920px) {
+      grid-auto-flow: column;
+      grid-template-columns: 2fr 1fr;
+      column-gap: 26px;
+    }
   }
   // .product__button
   &__button {
-    width: 100%;
-    order: 1;
-    margin-top: 20px;
-    // width: 275px;
-    // margin-right: 40px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
   // .product__share
   &__share {
-    margin-left: auto;
+    order: -1;
+    justify-self: center;
+    @media (min-width: $md6) {
+      order: 1;
+      justify-self: start;
+      align-self: center;
+    }
+    @media (min-width: $md5) {
+      order: -1;
+      justify-self: center;
+    }
+    @media (min-width: 920px) {
+      order: 1;
+      justify-self: start;
+    }
+  }
+  // .product__share-button
+  &__share-button {
+    padding: 5px 8px;
     color: $grey;
+    text-decoration: underline dotted;
     &:hover,
     &:focus {
-      text-decoration: underline;
+      color: lighten($color: $grey, $amount: 12%);
     }
     &:active {
       color: darken($color: $grey, $amount: 20%);
@@ -325,6 +356,117 @@
     }
     &:nth-child(2) {
       width: 40%;
+    }
+  }
+}
+//========================================================================================================================================================
+.related-products {
+  // .related-products__inner
+  &__inner {
+    @include padding-container($maxWidthContainer, $pl, $pr);
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  // .related-products__item
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 60px;
+      @media (min-width: $md4) {
+        margin-bottom: 80px;
+      }
+      @media (min-width: $md2) {
+        margin-bottom: 70px;
+      }
+    }
+  }
+  // .related-products__heading-wrapper
+  &__heading-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    @media (min-width: $md4) {
+      margin-bottom: 40px;
+    }
+    @media (min-width: $md1) {
+      margin-bottom: 45px;
+    }
+  }
+  // .related-products__heading
+  &__heading {
+    font-family: $forum;
+    font-size: 25px;
+    @media (min-width: $md4) {
+      font-size: 50px;
+    }
+    @media (min-width: $md1) {
+      font-size: 60px;
+    }
+  }
+  // .related-products__see-all
+  &__see-all {
+    font-size: 15px;
+    line-height: 1.4;
+    color: $black;
+    align-self: flex-end;
+    @media (min-width: $md4) {
+      font-size: 25px;
+    }
+  }
+  // .related-products__slider
+  &__slider {
+    position: relative;
+    .swiper-slide {
+      width: 240px;
+      @media (min-width: $md7) {
+        width: 289px;
+      }
+    }
+    .slider-pagination {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 30px;
+      // z-index: -1;
+      // position: absolute;
+      // left: 50%;
+      // bottom: 0;
+      // transform: translateX(-50%);
+      @media (min-width: $md4) {
+        margin-top: 45px;
+      }
+      @media (min-width: $md2) {
+        display: none;
+      }
+    }
+    .swiper-button-prev,
+    .swiper-button-next {
+      display: none;
+      z-index: 2;
+      position: absolute;
+      top: calc(50% - 40px);
+      transform: translateY(-50%);
+      @media (min-width: $md2) {
+        display: flex;
+      }
+    }
+    .swiper-button-prev {
+      left: 0;
+      @media (min-width: 1300px) {
+        left: -24px;
+      }
+    }
+    .swiper-button-next {
+      right: 0;
+      @media (min-width: 1300px) {
+        right: -24px;
+      }
+    }
+  }
+  // .related-products__slider-inner
+  &__slider-inner {
+    &.swiper {
+      padding-bottom: 80px;
     }
   }
 }
