--- a/#src/scss/bem-blocks/product-card.scss
+++ b/#src/scss/bem-blocks/product-card.scss
@@ -159,6 +159,7 @@
   }
 }
 .counter-card {
+  //!вынести в блок отдельный
   display: inline-flex;
   align-items: center;
   // .counter-card__button
@@ -208,16 +209,18 @@
   // .counter-card__count
   &__count {
     font-size: 17px;
-  }
-  // .counter-card__text
-  &__text {
-    display: block;
-    text-align: center;
-    font-size: 17px;
-    line-height: 1.3;
-    color: $grey-light;
+
+    // .counter-card__text
+    &__text {
+      display: block;
+      text-align: center;
+      font-size: 17px;
+      line-height: 1.3;
+      color: $grey-light;
+    }
   }
 }
+
 .gallery-card {
   // .gallery-card__slider
   &__slider {
