--- a/#src/scss/product.scss
+++ b/#src/scss/product.scss
@@ -111,25 +111,27 @@
   }
   // .product__thumbs-slide
   &__thumbs-slide {
-    // background-color: #f6f6f6;
-    // &.swiper-slide {
-    //   height: 93px;
-    // }
+    &.swiper-slide {
+      width: 83px;
+      @media (min-width: $md4) {
+        height: 83px;
+      }
+    }
     img {
       max-width: 100%;
       height: auto;
       object-fit: cover;
+      border: 1px solid transparent;
       /* Для alt */
       //!нужна фиксированная высота блока чтобы можно было центрировать
       // display: grid;
       // place-items: center;
       // font-size: 10px;
-      // border: 1px solid transparent;
     }
     &.swiper-slide-thumb-active {
-      // & img {
-      border: 1px solid $orange;
-      // }
+      & img {
+        border: 1px solid $orange;
+      }
       /* Почему-то не работает в хрома на телефоне */
       // box-shadow: inset 0 0 0 1px $red;
     }
