--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -82,7 +82,7 @@ main {
 @import 'bem-blocks/slider-control';
 @import 'bem-blocks/logo';
 @import 'bem-blocks/page-nav';
-@import 'bem-blocks/cart';
+@import 'bem-blocks/nav-bar';
 @import 'bem-blocks/search';
 @import 'bem-blocks/contacts';
 @import 'bem-blocks/socials';
@@ -93,6 +93,7 @@ main {
 @import 'bem-blocks/breadcrumbs';
 @import 'bem-blocks/pagination';
 @import 'bem-blocks/view-change';
+@import 'bem-blocks/counter';
 
 /* page-blocks */
 @import 'page-blocks/products-panel';
