--- a/#src/scss/bem-blocks/form.scss
+++ b/#src/scss/bem-blocks/form.scss
@@ -183,89 +183,15 @@
   &__text {
   }
 }
-
-.radio-button {
-  position: relative;
-  cursor: pointer;
-  background-color: $white;
-  border: 2px solid $orange;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  appearance: none;
-  color-adjust: exact;
-  transition: box-shadow 0.1s linear;
-  &:hover {
-    box-shadow: 0 0 2px 0px $orange;
-  }
-  &::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-  }
-  /* Checked */
-  &:checked::before {
-    background-color: $orange;
-    width: 10px;
-    height: 10px;
-  }
-  /* Active */
-  &:active::before {
-    background-color: $orange;
-    width: 12px;
-    height: 12px;
-  }
-  /* Disabled */
-  &:disabled {
-    border: 2px solid #bdbdbd;
-    background-color: $white;
-    box-shadow: none;
-    &::before {
-      background-color: $white;
-    }
-  }
-  &:checked:disabled {
-    // border: 2px solid #bdbdbd;
-    // background-color: #bdbdbd;
-    // box-shadow: none;
-    &::before {
-      background-color: #bdbdbd;
-      width: 10px;
-      height: 10px;
-    }
-  }
-  &.error {
-    border: 2px solid #bdbdbd;
-    background-color: $white;
-    box-shadow: none;
-    &::before {
-      background-color: $white;
-    }
-  }
-  &.inactive {
-    border: 2px solid #bdbdbd;
-    background-color: #bdbdbd;
-    box-shadow: none;
-    &::before {
-      background-color: #bdbdbd;
-    }
-  }
-  &--offset-right {
-    margin-right: 10px;
-  }
-}
-
 .radio {
   position: relative;
+  display: flex;
+  align-items: center;
   cursor: pointer;
   // .radio__input
   &__input {
     position: absolute;
+    appearance: none;
     width: 1px;
     height: 1px;
     margin: -1px;
@@ -275,8 +201,6 @@
     clip: rect(0, 0, 0, 0);
     /* Checked */
     &:checked + .radio__box {
-      // background-color: $orange;
-      // box-shadow: 0 0 0 1px $orange;
       &::before {
         background-color: $orange;
         width: 10px;
@@ -302,7 +226,7 @@
       }
     }
     /* Focused */
-    &:focus + .radio__box {
+    &:focus-visible + .radio__box {
       box-shadow: 0 0 3px 0 $orange-dark;
     }
     /* Disabled */
@@ -403,19 +327,20 @@
   //   margin-right: 10px;
   // }
 }
-
-/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
   width: 36px;
   height: 21px;
-
-  /* Hide default HTML checkbox */
-  input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  &__input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0, 0, 0, 0);
     &:checked + .switch__slider {
       background-color: $orange;
       &::before {
