--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,12 +1,15 @@
 .footer {
   background-color: $bg-black;
-  // padding-top: 60px;
-  // padding-bottom: 60px;
   // .footer__inner
   &__inner {
     @include padding-container($maxWidthContainer, $pl, $pr);
     @media (min-width: $md2) {
-      display: flex;
+      display: grid;
+      grid-template-columns: 7fr 5fr;
+      grid-template-areas:
+        'main info'
+        'bottom bottom';
+      row-gap: 20px;
     }
   }
   // .footer__group
@@ -18,32 +21,33 @@
       padding-top: 70px;
       padding-bottom: 70px;
     }
-    @media (min-width: $md2) {
-      width: calc(100% / 12 * 5);
-      flex-shrink: 0;
-      flex-grow: 0;
-      padding-top: 120px;
-      padding-bottom: 120px;
-    }
+    // @media (min-width: $md2) {
+    //   padding-top: 120px;
+    //   padding-bottom: 120px;
+    // }
     &--main {
+      display: grid;
+      grid-template-columns: min-content;
+      justify-content: center;
+      row-gap: 40px;
+      @media (min-width: 640px) {
+        grid-template-columns: min-content 1fr;
+        justify-content: start;
+        column-gap: 40px;
+      }
       @media (min-width: $md4) {
-        display: flex;
+        column-gap: 80px;
       }
       @media (min-width: $md2) {
-        width: calc(100% / 12 * 7);
-        // padding-right: 50px;
+        grid-area: main;
+        //   width: calc(100% / 12 * 7);
       }
-      // @media (min-width: $md1) {
-      //   padding-right: 106px;
-      // }
     }
     &--info {
-      // @media (min-width: $md2) {
-      //   margin-left: 50px;
-      // }
-      // @media (min-width: $md1) {
-      //   margin-left: 106px;
-      // }
+      @media (min-width: $md2) {
+        grid-area: info;
+        // width: calc(100% / 12 * 5);
+      }
     }
     &--separator {
       &::after {
@@ -68,58 +72,69 @@
       }
     }
   }
-  // .footer__col
-  &__col {
-    display: flex;
-    flex-direction: column;
-    @media (min-width: $md4) {
-      margin-right: 114px;
-      // flex-basis: 50%;
-    }
+  // .footer__bottom
+  &__bottom {
+    display: grid;
+    row-gap: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     @media (min-width: $md2) {
-      margin-right: 70px;
+      grid-area: bottom;
+      justify-self: center;
     }
   }
-  // .footer__logo
-  &__logo {
-    margin-bottom: 24px;
-    .logo__img {
-      width: 280px;
-      height: 95px;
-      @media (min-width: $md2) {
-        width: 186px;
-        height: 67px;
+  // .footer__bottom-links
+  &__bottom-links {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 15px 30px;
+    a {
+      font-size: 14px;
+      line-height: 1.3;
+      color: darken($color: $white, $amount: 40%);
+      &:hover,
+      &:focus {
+        color: $white;
+        text-decoration: underline;
       }
     }
   }
-  // .footer__privacy
-  &__privacy {
-    margin-bottom: 24px;
-    @media (min-width: $md4) {
-      margin-bottom: 0;
+  // .footer__copyright
+  &__copyright {
+    justify-self: center;
+    color: darken($color: $white, $amount: 40%);
+  }
+  // .footer__logo
+  &__logo {
+    display: flex;
+    justify-content: center;
+    .logo__img {
+      width: 186px;
+      height: 67px;
+      // width: 266px;
+      // height: 96px;
+      // @media (min-width: $md2) {
+      //   width: 186px;
+      //   height: 67px;
+      // }
     }
   }
   // .footer__nav
   &__nav {
-    max-width: 306px;
+    justify-self: center;
     @media (min-width: $md2) {
-      margin-right: 50px;
-    }
-    @media (min-width: $md1) {
-      margin-right: 106px;
+      justify-self: start;
     }
     .page-nav__list {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: -30px;
-      margin-right: -30px;
-    }
-    .page-nav__item {
-      width: 50%;
-      padding-left: 30px;
-      padding-right: 30px;
-      padding-bottom: 14px;
-      padding-top: 14px;
+      display: grid;
+      grid-template-columns: repeat(2, min-content);
+      row-gap: 28px;
+      column-gap: 60px;
+      @media (min-width: $md4) {
+        grid-auto-columns: min-content;
+        grid-template-rows: repeat(3, 1fr);
+        grid-auto-flow: column;
+      }
     }
     .page-nav__link {
       font-family: $montserrat;
@@ -148,84 +163,5 @@
         }
       }
     }
-  }
-}
-.logo {
-  // .logo__link
-  &__link {
-  }
-  // .logo__img
-  &__img {
-  }
-}
-.privacy {
-  // .privacy__link
-  &__link {
-    font-family: $montserrat;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.5;
-    color: $text-white;
-    &:hover,
-    &:focus {
-      text-decoration: underline;
-    }
-  }
-}
-.page-nav {
-  // .page-nav__list
-  &__list {
-  }
-  // .page-nav__item
-  &__item {
-  }
-  // .page-nav__link
-  &__link {
-  }
-}
-.contacts {
-  // .contacts__item
-  &__item {
-  }
-  // .contacts__link
-  &__link {
-  }
-  // .contacts__icon
-  &__icon {
-  }
-  // .contacts__icon--phone
-  &__icon--phone {
-  }
-  // .contacts__text
-  &__text {
-  }
-  // .contacts__item--socials
-  &__item--socials {
-  }
-  // .contacts__item--work-schedule
-  &__item--work-schedule {
-  }
-  // .contacts__icon--mail
-  &__icon--mail {
-  }
-}
-.socials {
-  // .socials__item
-  &__item {
-  }
-  // .socials__link
-  &__link {
-  }
-  // .socials__icon
-  &__icon {
-  }
-  // .socials__icon--viber
-  &__icon--viber {
-  }
-  // .socials__icon--whatsapp
-  &__icon--whatsapp {
-  }
-  // .socials__icon--telegram
-  &__icon--telegram {
   }
 }
